--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ant-design/icons-react",
-  "version": "2.0.1",
+  "version": "2.0.1-1",
   "main": "./lib/index.js",
   "module": "./es/index.js",
   "sideEffects": false,
